<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.liamc.lecturetrack.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">



    <TextView
        android:id="@+id/logged_in_state_text"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/heart_rate_text_view"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/logged_in_state_text"
        android:text="@string/heart_rate_text"/>

    <TextView
        android:id="@+id/heart_rate_figure"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heart_rate_text_view"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/stop_button"
        android:layout_toStartOf="@+id/stop_button" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/consent_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/consent"
        android:layout_above="@+id/start_button"
        android:layout_alignBaseline="@+id/log_in_button"
        android:layout_alignBottom="@+id/log_in_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/stop_button"
        android:layout_toStartOf="@+id/stop_button" />

    <Button
        android:id="@+id/log_in_button"
        android:text="@string/log_in"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stop_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/log_out_button"
        android:text="@string/log_out"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stop_button"
        android:layout_alignBaseline="@+id/log_in_button"
        android:layout_alignBottom="@+id/log_in_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/side_nav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        />




</android.support.v4.widget.DrawerLayout>
